<resources>
    <string name="app_name">New Horizons Island Checklist</string>
    <string name="title_fossils">Fossils</string>
    <string name="title_bugs">Bugs</string>
    <string name="title_fish">Fish</string>
    <string name="jan">Jan</string>
    <string name="feb">Feb</string>
    <string name="mar">Mar</string>
    <string name="apr">Apr</string>
    <string name="may">May</string>
    <string name="jun">Jun</string>
    <string name="jul">Jul</string>
    <string name="aug">Aug</string>
    <string name="sep">Sep</string>
    <string name="oct">Oct</string>
    <string name="nov">Nov</string>
    <string name="dec">Dec</string>
    <string name="action_hemisphere">Change Hemisphere</string>
    <string name="action_about">About</string>
</resources>
